<resources>
    <string name="app_name">SurviveUni</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sleep_main">SleepMainActivity</string>
    <string name="title_activity_study_main_menu">StudyMainMenu</string>
    <string name="title_activity_study_menu">StudyMenu</string>
    <string name="title_activity_login">Sign In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Next_Round">"Next Round"</string>
    <string name="Level_1">"Level 1"</string>
    <string name="Level_2">"Level 2"</string>
    <string name="Level_3">"Level 3"</string>
    <string name="save">"SAVE"</string>
    <string name="timeStart">"Time: 0"</string>
    <string name="doorDescription">"The door opened"</string>
    <string name="exit">"Exit"</string>
    <string name="startStudying">"Let's Go"</string>
    <string name="studyInstruction">"There may be various distraction accur during study time, what you need to do is click the distraction asap so that you can survive this day."</string>
    <string name="studyHint">"Hint: Remember to click Exit after each turn"</string>
    <string name="socialAnswerText">"I have thought of an integer ranging from 1 to 5. Wanna try and guess it?"</string>
    <string name="socialAnswerButton">"Submit"</string>
    <string name="socialFeedbackNextButton">"Next Round"</string>
    <string name="socialFeedbackSaveButton">"Save"</string>
    <string name="socialMainTitle">"Social: Oh isn't that scary!"</string>
    <string name="socialMainText">"But don't worry ;) — we will try and make it as easy as we can for you. \nYou will meet a strange but nice person trying to befriend you. However, you can only succeed when you think in the same way — that is, guess the number correctly! \nSo, are you ready?"</string>
    <string name="socialMainGoButton">"LET'S GO!"</string>
    <string name="socialMainNoButton">"NOT YET"</string>
    <string name="createAccountCongrats">"Congratulations!\nYou have been admitted by the university.\nTry to survive here!"</string>
    <string name="createAccountUser">"Username"</string>
    <string name="createAccountPassword">"Password"</string>
    <string name="createAccountScore">"Name On ScoreBoard"</string>
    <string name="newGame">"New Game"</string>
    <string name="loadGame">"Load Game"</string>
    <string name="saveGame">"Save Game"</string>
    <string name="surviveUni">"SurviveUni"</string>
    <string name="welcomeBack">"Welcome Back!"</string>
    <string name="start">"START"</string>
    <string name="study">"Study"</string>
    <string name="gpa">"GPA:50"</string>
    <string name="social">"Social"</string>
    <string name="happiness">"Happiness:50"</string>
    <string name="sleep">"Sleep"</string>
    <string name="spirit">"Spirit:50"</string>
    <string name="title">"Survive In University"</string>
    <string name="senior">"Senior"</string>
    <string name="freshman">"Freshman"</string>
    <string name="team">"©2019 Team0594"</string>
    <string name="back">"Back"</string>
    <string name="totalScore">"Total Score"</string>
    <string name="nickName">"Nick Name"</string>
    <string name="scoreBoard">"Score Board"</string>
    <string name="sleepAnswer">"How many sheep are there in your dream?"</string>
    <string name="sleepTitle">"Sleep: Count Sheep"</string>
    <string name="sleepRule">"Game Rule: A number of sheep will appear in your dream, please count and indicate the number later to have a good sleep."</string>
    <string name="anonymous">"ANONYMOUS"</string>
</resources>
