<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".gameCentre.CreateAccountSystem.CreateAccountActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="266dp"
        android:layout_height="50dp"
        android:text="@string/createAccountCongrats"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/CreateAccountAccInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/createAccountUser"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/CreateAccountPwInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="236dp"
        android:ems="10"
        android:hint="@string/createAccountPassword"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateAccountAccInput" />

    <Button
        android:id="@+id/CreateAccountSubmitBtn"
        android:layout_width="149dp"
        android:layout_height="38dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="134dp"
        android:background="#70000000"
        android:text="@string/socialAnswerButton"
        android:textColor="#FFFFFF"
        android:onClick="setCreateBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateAccountPwInput" />

    <Button
        android:id="@+id/CreateAccountExitBtn"
        android:layout_width="152dp"
        android:layout_height="46dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="52dp"
        android:text="@string/exit"
        android:onClick="setExitBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateAccountSubmitBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="184dp" />

    <EditText
        android:id="@+id/CreateAccountNickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:hint="@string/createAccountScore"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/CreateAccountPwInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateAccountAccInput" />

</androidx.constraintlayout.widget.ConstraintLayout>