<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_good"
    android:orientation="vertical">

    <TextView
        android:id="@+id/studyTimeText"
        android:layout_width="wrap_content"
        android:layout_height="205dp"
        android:layout_gravity="center"
        android:text="@string/timeStart"
        android:textAlignment="center"

        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/theButton"

        android:layout_width="wrap_content"
        android:layout_height="262dp"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:background="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@null" />

    <ImageButton
        android:id="@+id/MessageButton"
        android:layout_width="279dp"
        android:layout_height="73dp"


        android:layout_gravity="start"

        android:layout_weight="0"
        android:background="@null"
        android:scaleType="centerInside"
        app:srcCompat="@null" />



    <TextView
        android:id="@+id/studyResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:text=""
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/exitStudyButton"
            android:layout_weight="0"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:background="@android:drawable/button_onoff_indicator_off"
            android:text="@string/exit"
            android:onClick="setExitBtn"/>

        <Button
            android:id="@+id/StudySaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/doorDescription"
            android:onClick="setSaveScoreBtn"
            android:text="@string/save" />

    </LinearLayout>


</LinearLayout>