<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".study.StudyMenu">

    <Button
        android:id="@+id/StudyMenuGoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="40dp"
        android:onClick="StartStudyGame"
        android:text="@string/startStudying"
        app:layout_constraintBottom_toTopOf="@+id/StudyMenuExitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/StudyMenuExitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="177dp"
        android:onClick="ExitStudyGame"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StudyMenuGoBtn" />

    <TextView
        android:id="@+id/textView6"
        style="@android:style/Widget.Material.TextView"
        android:layout_width="261dp"
        android:layout_height="203dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="127dp"

        android:text="@string/studyInstruction"
        android:textColor="#7A7678"
        android:textColorLink="#E91E63"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/StudyMenuGoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.500" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="159dp"
        android:layout_height="60dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="116dp"
        android:text="@string/studyHint"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StudyMenuExitBtn" />

    <Spinner
        android:id="@+id/studyLevel"
        android:layout_width="159dp"
        android:layout_height="60dp"
        android:layout_marginBottom="268dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/chooseLevelMss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="279dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>