<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_customize"
    tools:context=".gameCentre.CustomizeActivity">

    <Button
        android:id="@+id/CustomizeNewGameBtn"
        android:layout_width="119dp"
        android:layout_height="37dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="396dp"
        android:background="#70000000"
        android:text="@string/newGame"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CustomizeLoadGameBtn"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="313dp"
        android:text="@string/loadGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CustomizeNewGameBtn" />

    <Button
        android:id="@+id/CustomizeSignOutBtn"
        android:layout_width="119dp"
        android:layout_height="37dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="231dp"
        android:background="#70000000"
        android:text="SIGN OUT"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CustomizeLoadGameBtn" />

    <Button
        android:id="@+id/CustomizeSaveBtn"
        android:layout_width="127dp"
        android:layout_height="46dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="151dp"
        android:text="@string/saveGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CustomizeSignOutBtn" />

    <!--    <Button-->
    <!--        android:id="@+id/CustomizeResumeBtn"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="159dp"-->
    <!--        android:layout_marginTop="37dp"-->
    <!--        android:layout_marginEnd="164dp"-->
    <!--        android:layout_marginBottom="146dp"-->
    <!--        android:onClick="setResumeBtn"-->
    <!--        android:text="Resume Game"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/CustomizeSaveBtn" />-->
</androidx.constraintlayout.widget.ConstraintLayout>